Updated download link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav nav-justified">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#">Download</a></li>
+                            <li><a href="https://play.google.com/store/apps/details?id=org.faudroids.keepon">Download</a></li>
                             <li><a href="http://faudroids.org">Blog</a></li>
                             <li><a href="#section1">About</a></li>
                             <li><a href="#section2">Contact</a></li>
@@ -111,7 +111,7 @@
                     <a href="https://twitter.com/faudroids">@faudroids</a> or on
                     <a href="https://github.com/FauDroids/MrHyde" target="_blank">GitHub</a>.
                     Also please consider heading over to the
-                    <a href="https://play.google.com/store/apps/details?id=org.faudroids.keepgoing">Playstore</a>
+                    <a href="https://play.google.com/store/apps/details?id=org.faudroids.keepon">Playstore</a>
                     and rating KeepOn!
                 </p>
             </div>
